# fastapi-users

./: README.md  pyproject.toml
fastapi-application/: .env.template  app_lifespan.py  main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2025_11_03_1340-0e9e6f702e9b_create_user_models.py  2025_11_04_1336-49b476a43fe4_create_users_table.py  2025_11_04_1444-5d92198650d4_create_access_tokens_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  auth.py  fastapi_users_router.py  messages.py  users.py
fastapi-application/api/api_v1/users/crud/: users.py
fastapi-application/api/api_v1/users/views/: view.py
fastapi-application/api/dependencies/: access_tokens.py  backend.py  fastapi_users_router.py  strategy.py  user_manager.py
fastapi-application/api/dependencies/authentication/: backend.py  fastapi_users_router.py  strategy.py  user_manager.py
fastapi-application/core/: config.py
fastapi-application/core/authentication/: user_manager.py
fastapi-application/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
fastapi-application/core/schemas/: user.py
fastapi-application/utils/: case_converter.py
